@@ -8,6 +8,7 @@ import javax.swing.*;
 import javax.swing.border.EmptyBorder;
 import javax.swing.border.TitledBorder;
 import javax.swing.table.DefaultTableModel;
+import javax.swing.table.DefaultTableCellRenderer;
 import java.awt.*;
 import java.sql.*;
 import java.text.NumberFormat;
@@ -16,6 +17,11 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
+import java.util.Set;
+import java.util.HashSet;
+import javax.swing.Timer;
+
+
 
 public class OrderConfirmationPanel extends JPanel {
     // --- Constants and variables ---
@@ -37,13 +43,36 @@ public class OrderConfirmationPanel extends JPanel {
     private JTextField searchField;
     private JComboBox<String> filterComboBox;
     private NumberFormat currencyFormat;
+    
+    // Auto-refresh and highlighting variables
+    private Timer refreshTimer;
+    private Set<Integer> newOrderIds;
+    private Set<Integer> previousOrderIds;
+    
+    // Notification for new orders
+    private JLabel notificationLabel;
+    private Timer notifyHideTimer;
+    
+
 
     public OrderConfirmationPanel() {
         setBackground(BACKGROUND_COLOR);
         setLayout(new GridBagLayout());
         setBorder(new EmptyBorder(15, 15, 15, 15));
 
-        currencyFormat = NumberFormat.getCurrencyInstance(new Locale("vi", "VN"));
+        currencyFormat = NumberFormat.getCurrencyInstance(Locale.of("vi", "VN"));
+        
+        // Initialize auto-refresh and highlighting variables
+        newOrderIds = new HashSet<>();
+        previousOrderIds = new HashSet<>();
+        
+        // Initialize auto-refresh timer (5 seconds)
+        refreshTimer = new Timer(5000, event -> {
+            refreshData();
+            highlightNewOrders();
+        });
+        refreshTimer.start();
+        
         GridBagConstraints layout = new GridBagConstraints();
         layout.insets = new Insets(5, 5, 5, 5);
 
@@ -72,12 +101,17 @@ public class OrderConfirmationPanel extends JPanel {
         layout.fill = GridBagConstraints.HORIZONTAL;
         add(createActionButtons(), layout);
 
+
+        
         loadOrders();
     }
 
     private JPanel createSearchFilterPanel() {
-        JPanel panel = new JPanel(new FlowLayout(FlowLayout.LEFT, 10, 5));
+        JPanel panel = new JPanel(new BorderLayout());
         panel.setOpaque(false);
+
+        JPanel left = new JPanel(new FlowLayout(FlowLayout.LEFT, 10, 5));
+        left.setOpaque(false);
 
         JLabel searchLabel = createLabel("Search:");
         searchField = new JTextField(20);
@@ -90,15 +124,28 @@ public class OrderConfirmationPanel extends JPanel {
         JButton searchButton = createButton("🔍 Search");
         JButton refreshButton = createButton("🔄 Refresh");
 
-        searchButton.addActionListener(e -> performSearch());
-        refreshButton.addActionListener(e -> refreshData());
+        searchButton.addActionListener(event -> performSearch());
+        refreshButton.addActionListener(event -> refreshData());
 
-        panel.add(searchLabel);
-        panel.add(searchField);
-        panel.add(filterLabel);
-        panel.add(filterComboBox);
-        panel.add(searchButton);
-        panel.add(refreshButton);
+        left.add(searchLabel);
+        left.add(searchField);
+        left.add(filterLabel);
+        left.add(filterComboBox);
+        left.add(searchButton);
+        left.add(refreshButton);
+
+        notificationLabel = new JLabel("");
+        notificationLabel.setFont(FONT_LABEL);
+        notificationLabel.setForeground(new Color(255, 255, 255));
+        notificationLabel.setBorder(new EmptyBorder(0, 0, 0, 10));
+        notificationLabel.setHorizontalAlignment(SwingConstants.RIGHT);
+
+        JPanel right = new JPanel(new FlowLayout(FlowLayout.RIGHT, 10, 5));
+        right.setOpaque(false);
+        right.add(notificationLabel);
+
+        panel.add(left, BorderLayout.CENTER);
+        panel.add(right, BorderLayout.EAST);
 
         return panel;
     }
@@ -114,12 +161,15 @@ public class OrderConfirmationPanel extends JPanel {
         orderTable = new JTable(orderModel);
         orderTable.setFont(new Font("Helvetica", Font.PLAIN, 14));
         orderTable.setRowHeight(28);
-        orderTable.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
-        orderTable.getSelectionModel().addListSelectionListener(e -> {
-            if (!e.getValueIsAdjusting()) {
+        orderTable.setSelectionMode(ListSelectionModel.MULTIPLE_INTERVAL_SELECTION);
+        orderTable.getSelectionModel().addListSelectionListener(event -> {
+            if (!event.getValueIsAdjusting()) {
                 loadOrderDetails();
             }
         });
+        
+        // Set custom renderer for status column (column index 6)
+        orderTable.getColumnModel().getColumn(6).setCellRenderer(new StatusCellRenderer());
 
         JScrollPane scroll = new JScrollPane(orderTable);
         scroll.setBorder(createTitledBorder(" Order Confirmation "));
@@ -151,45 +201,62 @@ public class OrderConfirmationPanel extends JPanel {
 
         JButton confirmButton = createButton("✅ Confirm (Processing)");
         JButton cancelOrderButton = createButton("✖ Cancel Order");
-        JButton exportButton = createButton("📊 Export Report");
-        JButton printButton = createButton("🖨️ Print Order");
+        JButton doneButton = createButton("✅ Done Status Order");
         JButton deleteButton = createButton("🗑️ Delete Order");
-        JButton viewReceiptButton = createButton("📄 View Receipt");
+        JButton gotoOrderButton = createButton("➡️ Go To Order");
+        JButton mergeButton = createButton("🔀 Merge Orders");
 
-        confirmButton.addActionListener(e -> updateOrderStatus("Processing"));
-        cancelOrderButton.addActionListener(e -> updateOrderStatus("Cancelled"));
-        exportButton.addActionListener(e -> exportReport());
-        printButton.addActionListener(e -> printOrder());
-        deleteButton.addActionListener(e -> deleteOrder());
-        viewReceiptButton.addActionListener(e -> viewReceipt());
+        confirmButton.addActionListener(event -> updateOrderStatus("Processing"));
+        cancelOrderButton.addActionListener(event -> updateOrderStatus("Cancelled"));
+        doneButton.addActionListener(event -> updateOrderStatus("Completed"));
+        deleteButton.addActionListener(event -> deleteOrder());
+        mergeButton.addActionListener(event -> mergeSelectedOrders());
+        gotoOrderButton.addActionListener(event -> goToOrderWithCart());
 
         panel.add(confirmButton);
         panel.add(cancelOrderButton);
-        panel.add(exportButton);
-        panel.add(printButton);
+        panel.add(doneButton);
         panel.add(deleteButton);
-        panel.add(viewReceiptButton);
+        panel.add(mergeButton);
+        panel.add(gotoOrderButton);
 
         return panel;
     }
 
     private void loadOrders() {
+        // Store current order IDs before loading new data
+        previousOrderIds.clear();
+        for (int i = 0; i < orderModel.getRowCount(); i++) {
+            previousOrderIds.add((Integer) orderModel.getValueAt(i, 0));
+        }
+        
         orderModel.setRowCount(0);
+        newOrderIds.clear();
+        
         try {
             Connection conn = database.DatabaseConnector.getConnection();
             String sql = "SELECT o.order_id, COALESCE(o.table_number, 'N/A') AS table_number, " +
                          "COALESCE(o.shipping_name, c.name) AS customer_name, " +
                          "COALESCE(o.shipping_phone, c.phone) AS phone, o.order_date, " +
                          "COALESCE(o.total, o.total_amount) as total_display, o.status " +
-                         "FROM orders o LEFT JOIN customers c ON o.customer_id = c.id " +
+                         "FROM web_order o LEFT JOIN customers c ON o.customer_id = c.id " +
                          "ORDER BY o.order_date DESC";
             
             PreparedStatement ps = conn.prepareStatement(sql);
             ResultSet rs = ps.executeQuery();
 
+            int detectedNew = 0;
             while (rs.next()) {
+                int orderId = rs.getInt("order_id");
+                
+                // Check if this is a new order
+                if (!previousOrderIds.contains(orderId)) {
+                    newOrderIds.add(orderId);
+                    detectedNew++;
+                }
+                
                 Object[] row = {
-                    rs.getInt("order_id"),
+                    orderId,
                     rs.getString("table_number"),
                     rs.getString("customer_name"),
                     rs.getString("phone"),
@@ -203,6 +270,10 @@ public class OrderConfirmationPanel extends JPanel {
             rs.close();
             ps.close();
             conn.close();
+
+            if (detectedNew > 0) {
+                showNewOrdersNotification(detectedNew);
+            }
         } catch (SQLException e) {
             e.printStackTrace();
             JOptionPane.showMessageDialog(this, "Error loading orders: " + e.getMessage(), 
@@ -219,15 +290,11 @@ public class OrderConfirmationPanel extends JPanel {
         
         try {
             Connection conn = database.DatabaseConnector.getConnection();
-            String sql = "SELECT p.name as product_name, oi.quantity, oi.price, (oi.quantity * oi.price) as subtotal FROM order_items oi " +
-                         "JOIN products p ON oi.product_id = p.id WHERE oi.order_id = ? " +
-                         "UNION ALL " +
-                         "SELECT p.name as product_name, od.quantity, od.price, (od.quantity * od.price) as subtotal FROM order_details od " +
+            String sql = "SELECT p.name as product_name, od.quantity, od.price, (od.quantity * od.price) as subtotal FROM web_order_details od " +
                          "JOIN products p ON od.product_id = p.id WHERE od.order_id = ?";
 
             PreparedStatement ps = conn.prepareStatement(sql);
             ps.setInt(1, orderId);
-            ps.setInt(2, orderId);
             ResultSet rs = ps.executeQuery();
 
             while (rs.next()) {
@@ -261,7 +328,7 @@ public class OrderConfirmationPanel extends JPanel {
             sql.append("SELECT o.order_id, COALESCE(o.table_number, 'N/A') AS table_number, ");
             sql.append("COALESCE(o.shipping_name, c.name) AS customer_name, ");
             sql.append("COALESCE(o.shipping_phone, c.phone) AS phone, o.order_date, COALESCE(o.total, o.total_amount) as total_display, ");
-            sql.append("o.status FROM orders o LEFT JOIN customers c ON o.customer_id = c.id ");
+            sql.append("o.status FROM web_order o LEFT JOIN customers c ON o.customer_id = c.id ");
 
             List<Object> params = new ArrayList<>();
             boolean hasSearch = !searchTerm.isEmpty();
@@ -294,8 +361,9 @@ public class OrderConfirmationPanel extends JPanel {
 
             ResultSet rs = ps.executeQuery();
             while (rs.next()) {
+                int orderId = rs.getInt("order_id");
                 Object[] row = {
-                    rs.getInt("order_id"),
+                    orderId,
                     rs.getString("table_number"),
                     rs.getString("customer_name"),
                     rs.getString("phone"),
@@ -309,6 +377,9 @@ public class OrderConfirmationPanel extends JPanel {
             rs.close();
             ps.close();
             conn.close();
+            
+            // Repaint to show highlighting
+            orderTable.repaint();
         } catch (SQLException e) {
             e.printStackTrace();
             JOptionPane.showMessageDialog(this, "Error searching orders: " + e.getMessage(),
@@ -320,6 +391,30 @@ public class OrderConfirmationPanel extends JPanel {
         loadOrders();
         searchField.setText("");
         filterComboBox.setSelectedIndex(0);
+    }
+    
+    private void highlightNewOrders() {
+        // Force table repaint to show new highlighting
+        orderTable.repaint();
+    }
+
+    private void showNewOrdersNotification(int count) {
+        // Update label text and make it visible
+        notificationLabel.setText("🆕 New orders: " + count);
+        notificationLabel.setVisible(true);
+        // Play a short beep
+        Toolkit.getDefaultToolkit().beep();
+
+        // Auto-hide after 5 seconds; reset timer if already running
+        if (notifyHideTimer != null && notifyHideTimer.isRunning()) {
+            notifyHideTimer.stop();
+        }
+        notifyHideTimer = new Timer(5000, event -> {
+            notificationLabel.setText("");
+            notificationLabel.setVisible(false);
+        });
+        notifyHideTimer.setRepeats(false);
+        notifyHideTimer.start();
     }
 
     private void updateOrderStatus(String newStatus) {
@@ -335,7 +430,7 @@ public class OrderConfirmationPanel extends JPanel {
         if (confirm != JOptionPane.YES_OPTION) return;
         try {
             Connection conn = database.DatabaseConnector.getConnection();
-            String sql = "UPDATE orders SET status = ? WHERE order_id = ?";
+            String sql = "UPDATE web_order SET status = ? WHERE order_id = ?";
             PreparedStatement ps = conn.prepareStatement(sql);
             ps.setString(1, newStatus);
             ps.setInt(2, orderId);
@@ -345,6 +440,7 @@ public class OrderConfirmationPanel extends JPanel {
             if (affected > 0) {
                 JOptionPane.showMessageDialog(this, "Status updated.", "Success", JOptionPane.INFORMATION_MESSAGE);
                 loadOrders();
+                orderTable.repaint(); // Repaint to show updated colors
             } else {
                 JOptionPane.showMessageDialog(this, "Update failed.", "Error", JOptionPane.ERROR_MESSAGE);
             }
@@ -359,16 +455,7 @@ public class OrderConfirmationPanel extends JPanel {
             "Export Report", JOptionPane.INFORMATION_MESSAGE);
     }
 
-    private void printOrder() {
-        int selectedRow = orderTable.getSelectedRow();
-        if (selectedRow == -1) {
-            JOptionPane.showMessageDialog(this, "Please select an order to print", 
-                "No Selection", JOptionPane.WARNING_MESSAGE);
-            return;
-        }
-        JOptionPane.showMessageDialog(this, "Print functionality will be implemented here", 
-            "Print Order", JOptionPane.INFORMATION_MESSAGE);
-    }
+    // Removed printOrder button and handler as requested
 
     private void deleteOrder() {
         int selectedRow = orderTable.getSelectedRow();
@@ -390,15 +477,200 @@ public class OrderConfirmationPanel extends JPanel {
         }
     }
 
+    private void mergeSelectedOrders() {
+        int[] selectedRows = orderTable.getSelectedRows();
+        if (selectedRows == null || selectedRows.length < 2) {
+            JOptionPane.showMessageDialog(this, "Please select at least two orders to merge.", 
+                "Need Multiple Selections", JOptionPane.WARNING_MESSAGE);
+            return;
+        }
+
+        // Collect order IDs
+        List<Integer> orderIds = new ArrayList<>();
+        for (int rowIndex : selectedRows) {
+            orderIds.add((Integer) orderModel.getValueAt(rowIndex, 0));
+        }
+
+        int targetOrderId = orderIds.get(0);
+
+        // Validate same table and status Pending
+        String targetTable = null;
+        String targetStatus = null;
+        try {
+            Connection conn = database.DatabaseConnector.getConnection();
+            try {
+                for (Integer oid : orderIds) {
+                    String q = "SELECT table_number, status FROM web_order WHERE order_id = ?";
+                    try (PreparedStatement ps = conn.prepareStatement(q)) {
+                        ps.setInt(1, oid);
+                        try (ResultSet rs = ps.executeQuery()) {
+                            if (rs.next()) {
+                                String tn = rs.getString("table_number");
+                                String st = rs.getString("status");
+                                if (targetTable == null) targetTable = tn;
+                                if (targetStatus == null) targetStatus = st;
+                                if (!String.valueOf(targetTable).equals(String.valueOf(tn))) {
+                                    JOptionPane.showMessageDialog(this, "Orders must have the same table to merge.", 
+                                        "Invalid Selection", JOptionPane.ERROR_MESSAGE);
+                                    rs.close();
+                                    conn.close();
+                                    return;
+                                }
+                                if (!"Pending".equalsIgnoreCase(st)) {
+                                    JOptionPane.showMessageDialog(this, "Only Pending orders can be merged.", 
+                                        "Invalid Status", JOptionPane.ERROR_MESSAGE);
+                                    rs.close();
+                                    conn.close();
+                                    return;
+                                }
+                            }
+                        }
+                    }
+                }
+            } finally {
+                // keep connection open for next step
+            }
+            conn.close();
+        } catch (SQLException e) {
+            e.printStackTrace();
+            JOptionPane.showMessageDialog(this, "Database error during validation: " + e.getMessage(), 
+                "Error", JOptionPane.ERROR_MESSAGE);
+            return;
+        }
+
+        int confirm = JOptionPane.showConfirmDialog(this, 
+            "Merge these orders into order #" + targetOrderId + ": " + orderIds + "?", 
+            "Confirm Merge", JOptionPane.YES_NO_OPTION);
+        if (confirm != JOptionPane.YES_OPTION) {
+            return;
+        }
+
+        // Execute merge inside a transaction
+        try {
+            Connection conn = database.DatabaseConnector.getConnection();
+            conn.setAutoCommit(false);
+
+            try {
+                // For each source order (exclude target)
+                for (int i = 1; i < orderIds.size(); i++) {
+                    int sourceOrderId = orderIds.get(i);
+
+                    // Move/aggregate details
+                    String fetchDetails = "SELECT product_id, quantity, price FROM web_order_details WHERE order_id = ?";
+                    try (PreparedStatement ps = conn.prepareStatement(fetchDetails)) {
+                        ps.setInt(1, sourceOrderId);
+                        try (ResultSet rs = ps.executeQuery()) {
+                            while (rs.next()) {
+                                int productId = rs.getInt("product_id");
+                                int quantity = rs.getInt("quantity");
+                                double price = rs.getDouble("price");
+
+                                // Try to update existing row with same product and price
+                                String updateExisting = "UPDATE web_order_details SET quantity = quantity + ? WHERE order_id = ? AND product_id = ? AND price = ?";
+                                try (PreparedStatement up = conn.prepareStatement(updateExisting)) {
+                                    up.setInt(1, quantity);
+                                    up.setInt(2, targetOrderId);
+                                    up.setInt(3, productId);
+                                    up.setDouble(4, price);
+                                    int updated = up.executeUpdate();
+                                    if (updated == 0) {
+                                        // Insert new row into target
+                                        String insert = "INSERT INTO web_order_details(order_id, product_id, quantity, price) VALUES(?, ?, ?, ?)";
+                                        try (PreparedStatement ins = conn.prepareStatement(insert)) {
+                                            ins.setInt(1, targetOrderId);
+                                            ins.setInt(2, productId);
+                                            ins.setInt(3, quantity);
+                                            ins.setDouble(4, price);
+                                            ins.executeUpdate();
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    // Delete source order details and order
+                    try (PreparedStatement delDet = conn.prepareStatement("DELETE FROM web_order_details WHERE order_id = ?")) {
+                        delDet.setInt(1, sourceOrderId);
+                        delDet.executeUpdate();
+                    }
+                    try (PreparedStatement delOrd = conn.prepareStatement("DELETE FROM web_order WHERE order_id = ?")) {
+                        delOrd.setInt(1, sourceOrderId);
+                        delOrd.executeUpdate();
+                    }
+                }
+
+                // Recalculate total for target order
+                double newTotal = 0.0;
+                try (PreparedStatement sumPs = conn.prepareStatement("SELECT SUM(quantity * price) AS total FROM web_order_details WHERE order_id = ?")) {
+                    sumPs.setInt(1, targetOrderId);
+                    try (ResultSet rs = sumPs.executeQuery()) {
+                        if (rs.next()) {
+                            newTotal = rs.getDouble("total");
+                        }
+                    }
+                }
+
+                try (PreparedStatement updOrd = conn.prepareStatement("UPDATE web_order SET total = ?, total_amount = ?, order_date = NOW() WHERE order_id = ?")) {
+                    updOrd.setDouble(1, newTotal);
+                    updOrd.setDouble(2, newTotal);
+                    updOrd.setInt(3, targetOrderId);
+                    updOrd.executeUpdate();
+                }
+
+                conn.commit();
+            } catch (SQLException ex) {
+                conn.rollback();
+                throw ex;
+            } finally {
+                conn.setAutoCommit(true);
+                conn.close();
+            }
+
+            JOptionPane.showMessageDialog(this, "Orders merged successfully into order #" + targetOrderId + ".", 
+                "Merge Complete", JOptionPane.INFORMATION_MESSAGE);
+            loadOrders();
+            orderTable.repaint();
+        } catch (SQLException e) {
+            e.printStackTrace();
+            JOptionPane.showMessageDialog(this, "Database error during merge: " + e.getMessage(), 
+                "Merge Error", JOptionPane.ERROR_MESSAGE);
+        }
+    }
+
     private void viewReceipt() {
+        // Replaced by mergeSelectedOrders and done status order button
+        JOptionPane.showMessageDialog(this, "This action has been replaced.", 
+            "Info", JOptionPane.INFORMATION_MESSAGE);
+    }
+
+    private void goToOrderWithCart() {
         int selectedRow = orderTable.getSelectedRow();
         if (selectedRow == -1) {
-            JOptionPane.showMessageDialog(this, "Please select an order to view receipt", 
+            JOptionPane.showMessageDialog(this, "Please select an order first.", 
                 "No Selection", JOptionPane.WARNING_MESSAGE);
             return;
         }
-        JOptionPane.showMessageDialog(this, "Receipt view functionality will be implemented here", 
-            "View Receipt", JOptionPane.INFORMATION_MESSAGE);
+        int orderId = (Integer) orderModel.getValueAt(selectedRow, 0);
+
+        // Find parent frame and switch to Order panel, loading the cart
+        Window window = SwingUtilities.getWindowAncestor(this);
+        if (window instanceof MainApplication) {
+            MainApplication app = (MainApplication) window;
+            app.showOrderWithOrderId(orderId);
+        } else if (window instanceof JFrame) {
+            // Try to find MainApplication via parent chain if wrapped
+            JFrame frame = (JFrame) window;
+            if (frame instanceof MainApplication) {
+                ((MainApplication) frame).showOrderWithOrderId(orderId);
+            } else {
+                JOptionPane.showMessageDialog(this, "Cannot navigate to Order panel in this context.", 
+                    "Navigation Error", JOptionPane.ERROR_MESSAGE);
+            }
+        } else {
+            JOptionPane.showMessageDialog(this, "Cannot navigate to Order panel.", 
+                "Navigation Error", JOptionPane.ERROR_MESSAGE);
+        }
     }
 
     private TitledBorder createTitledBorder(String title) {
@@ -424,4 +696,49 @@ public class OrderConfirmationPanel extends JPanel {
         button.setBorder(new EmptyBorder(10, 20, 10, 20));
         return button;
     }
+    
+    // Method to stop timer when panel is closed
+    public void stopAutoRefresh() {
+        if (refreshTimer != null && refreshTimer.isRunning()) {
+            refreshTimer.stop();
+        }
+    }
+    
+    // Custom cell renderer for status column with color highlighting
+    private class StatusCellRenderer extends DefaultTableCellRenderer {
+        @Override
+        public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected, 
+                boolean hasFocus, int row, int column) {
+            Component c = super.getTableCellRendererComponent(table, value, isSelected, hasFocus, row, column);
+            
+            if (value != null) {
+                String status = value.toString();
+                int orderId = (Integer) table.getModel().getValueAt(row, 0);
+
+                // Determine background color purely by status
+                if ("Pending".equalsIgnoreCase(status)) {
+                    c.setBackground(new Color(173, 216, 230)); // Light blue for pending
+                } else if ("Processing".equalsIgnoreCase(status) || "Confirmed".equalsIgnoreCase(status) || "Completed".equalsIgnoreCase(status)) {
+                    c.setBackground(new Color(144, 238, 144)); // Light green
+                } else if ("Cancelled".equalsIgnoreCase(status) || "Canceled".equalsIgnoreCase(status)) {
+                    c.setBackground(new Color(255, 182, 193)); // Light red
+                } else {
+                    c.setBackground(Color.WHITE);
+                }
+
+                // Prepend new icon if this is a newly arrived order (does not affect color)
+                String displayText = status;
+                if (newOrderIds.contains(orderId)) {
+                    displayText = "🆕 " + displayText;
+                }
+                ((JLabel) c).setText(displayText);
+
+                // Text color
+                c.setForeground(Color.BLACK);
+            }
+            
+            return c;
+        }
+    }
+
 } 
